# c-project-template

./: CMakeLists.txt  LICENSE  Makefile  README.md  clean_build.sh
include/: my_func.h
src/: CMakeLists.txt  main.c  my_func.c
src/lib/: CMakeLists.txt  my_func.c
tests/: CMakeLists.txt  main.c  test_my_func.c
